[gd_scene load_steps=12 format=3 uid="uid://cwkb14pqgpac7"]

[ext_resource type="Script" path="res://Scripts/Menu/MainMenu.gd" id="1_6earn"]
[ext_resource type="Texture2D" uid="uid://bomcirlrpmapp" path="res://Images/13109aa1-9a41-41f7-9aa3-103a9627732d.webp" id="1_yweno"]
[ext_resource type="FontFile" uid="uid://cnpkcbpgi1f8p" path="res://Font/Daydream.ttf" id="2_vd4ea"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_phci6"]
texture = ExtResource("1_yweno")
modulate_color = Color(0.306923, 0.306923, 0.306923, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uraam"]
bg_color = Color(0.545098, 0.701961, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ullw"]
bg_color = Color(0.545098, 0.701961, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpepw"]
bg_color = Color(0.494118, 0.65098, 0.878431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sk323"]
bg_color = Color(0.647059, 0.784314, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3dcv5"]
bg_color = Color(0.545098, 0.701961, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y75tl"]
bg_color = Color(0.494118, 0.65098, 0.878431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(8, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkkgg"]
bg_color = Color(0.647059, 0.784314, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(8, 8)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6earn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_phci6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -95.0
offset_right = 177.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Options")
theme_override_colors/font_hover_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_pressed_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_focus_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_uraam")
theme_override_styles/hover = SubResource("StyleBoxFlat_4ullw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mpepw")
theme_override_styles/normal = SubResource("StyleBoxFlat_sk323")
text = "Start game"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Leaderboard")
theme_override_colors/font_hover_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_pressed_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_focus_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_uraam")
theme_override_styles/hover = SubResource("StyleBoxFlat_4ullw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mpepw")
theme_override_styles/normal = SubResource("StyleBoxFlat_sk323")
text = "Options"

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Exit")
theme_override_colors/font_hover_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_pressed_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_focus_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_uraam")
theme_override_styles/hover = SubResource("StyleBoxFlat_3dcv5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y75tl")
theme_override_styles/normal = SubResource("StyleBoxFlat_xkkgg")
text = "Leaderboard
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Leaderboard")
focus_neighbor_bottom = NodePath("../Start")
theme_override_colors/font_hover_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_pressed_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_focus_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_colors/font_color = Color(0.231373, 0.231373, 0.368627, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_uraam")
theme_override_styles/hover = SubResource("StyleBoxFlat_4ullw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mpepw")
theme_override_styles/normal = SubResource("StyleBoxFlat_sk323")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.5
offset_top = 77.0
offset_right = 234.5
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.498039, 0.498039, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("2_vd4ea")
theme_override_font_sizes/font_size = 60
text = "Voidwalker"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
